--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Uludağ Robot Topluluğu</title>
+    <meta
+      name="description"
+      content="Uludağ Üniversitesi Robot Topluluğu web sitesi"
+    />
   </head>
   <body>
     <div id="root"></div>
