--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Uludağ Robot Topluluğu</title>
+    <title>Uludağ Robot Toplufluğu</title>
     <meta
       name="description"
       content="Uludağ Üniversitesi Robot Topluluğu web sitesi"
